--- a/static/styles.css
+++ b/static/styles.css
@@ -2,14 +2,17 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f5f5f5;
+  background-color: #3b3b3b;
 }
 
+title {
+  color: white;
+}
 .container {
   max-width: 800px;
   margin: 50px auto;
   padding: 20px;
-  background: white;
+  background: rgb(31, 31, 31);
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -21,7 +24,7 @@ body {
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #303030;
 }
 
 .message {
@@ -48,7 +51,8 @@ body {
 }
 
 .bot-message .content {
-  background-color: #eaeaea;
+  background-color: #5f5f5f;
+  color: white;
 }
 
 textarea {
