--- a/static/styles.css
+++ b/static/styles.css
@@ -101,9 +101,15 @@ pre {
   text-align: left;
 }
 
-loginModal {
-  background-color: #303030;
-  align-self: center;
+.login_container {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 20px;
+  background: rgb(31, 31, 31);
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  align-content: center;
   align-items: center;
-  color: white;
+  justify-content: center;
+  justify-items: center;
 }
