--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,7 @@
     </div>
 
     <!-- Login Modal -->
-    <div
-      id="loginModal"
-      class="login_container"
-      style="display: grid; place-items: center; height: flex"
-    >
+    <div id="loginModal" class="login_container">
       <h3 style="color: white">Login</h3>
       <form id="loginForm" style="color: white">
         <label for="username">Username:</label>
