--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 
     <!-- Login Modal -->
     <div id="loginModal" class="login_container">
-      <h3 style="color: white">Login</h3>
+      <h3 style="color: white; align-self: center">Login</h3>
       <form id="loginForm" style="color: white">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required /><br /><br />
